--- a/hacknc/templates/registration/profile.html
+++ b/hacknc/templates/registration/profile.html
@@ -17,31 +17,37 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				{% if not tournament.is_locked %}
+				{% if tournament.is_matched %}
+					<div class="alert alert-success">
+						Matches have been generated for this tournament.
+					</div>
+				{% elif not tournament.is_locked %}
 					<div class="alert alert-warning">
 						Cannot run matcher until {{ tournament.date_lockout|naturaltime }} when tournament is locked.
 					</div>
 				{% endif %}
 				<h6>Match Status per Team</h6>
 				<div class="list-group">
-				{% for team in tournament.teams.all %}
-
-				{% if team.hostteammatch %}
-				<a href="{{team.hostteammatch.get_absolute_url}}" class="list-group-item list-group-item-action">{{team.name}} - matched with host(s):
-				{% for host in team.hostteammatch.hosts.all%}
-				{{host.name}},
-				{% endfor %}</a>
-
-				{% else %}
-				<p class="list-group-item list-group-item-action">{{team.name}} - no match yet</p>
-				{% endif %}
-				{% endfor %}
-			</div>
+					{% for team in tournament.teams.all %}
+						<a {% if team.hostteammatch %}href="{{ team.hostteammatch.get_absolute_url }}"{% endif %} class="list-group-item list-group-item-action">
+							<p class="font-weight-bold">
+								{{ team.name }}
+								{% if tournament.is_matched %}
+									{% if team.hostteammatch %}
+										<span class="badge badge-success">Matched</span>
+									{% else %}
+										<span class="badge badge-danger">No Match</span>
+									{% endif %}
+								{% endif %}
+							</p>
+						</a>
+					{% endfor %}
+				</div>
 			</div>
 			<div class="modal-footer">
 				<a class="mr-auto" href="{{ tournament.get_absolute_url }}">Tournament Details</a>
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				{% if tournament.is_locked %}
+				{% if tournament.is_locked and not tournament.is_matched %}
 				<form action="{% url 'housing:matcher' tournament.slug_key tournament.slug %}" method="POST">
 					{% csrf_token %}
 				<button type="submit" class="btn btn-primary">Run Matcher</button>
@@ -86,14 +92,18 @@
 					<div class="col-sm-8">
 					<p class="font-weight-bold mb-1">
 						{{tournament.name}}
-						{% if tournament.is_locked %}
-							<span class="badge badge-success">Locked</span>
+						{% if tournament.is_matched %}
+							<span class="badge badge-success">Matched</span>
+						{% elif tournament.is_locked %}
+							<span class="badge badge-warning">Locked</span>
 						{% else %}
-							<span class="badge badge-warning">Registering</span>
+							<span class="badge badge-secondary">Registering</span>
 						{% endif %}
 					</p>
 
-					{% if tournament.is_locked %}
+					{% if tournament.is_matched %}
+						Matches have been generated for this tournament.
+					{% elif tournament.is_locked %}
 						Locked since {{tournament.date_lockout}}.
 					{% else %}
 						Unlocked until {{tournament.date_lockout}}.
@@ -120,8 +130,10 @@
 							{{ team.name }}
 							{% if team.hostteammatch %}
 								<span class="badge badge-success">Matched</span>
+							{% elif team.tournament.is_matched %}
+								<span class="badge badge-danger">No Match Found</span>
 							{% else %}
-								<span class="badge badge-secondary">Not Matched</span>
+								<span class="badge badge-secondary">Match Pending</span>
 							{% endif %}
 						</p>
 						<p class="mb-1">
@@ -148,8 +160,10 @@
 							{{ host.name }}
 							{% if host.match %}
 								<span class="badge badge-success">Matched</span>
+							{% elif host.tournament.is_matched %}
+								<span class="badge badge-warning">No Match</span>
 							{% else %}
-								<span class="badge badge-secondary">Not Matched</span>
+								<span class="badge badge-secondary">Match Pending</span>
 							{% endif %}
 						</p>
 						<p class="mb-1">
